Functional Tic Tac Toe Board, but it is ugly.

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,32 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>Tic-Tac-Toe</title>
+  <script src="app.js"></script>
+</head>
+<body>
+  <h1>TIC-TAC-TOE</h1>
 
+  <table border='1'>
+    <tr class="top">
+      <td id="box0" onClick="handleClick(this.id)">---</td>
+      <td id="box1" onClick="handleClick(this.id)">---</td>
+      <td id="box2" onClick="handleClick(this.id)">---</td>
+    </tr>
+    <tr class="middle">
+      <td id="box3" onClick="handleClick(this.id)">---</td>
+      <td id="box4" onClick="handleClick(this.id)">---</td>
+      <td id="box5" onClick="handleClick(this.id)">---</td>
+    </tr>    
+    <tr class="bottom">
+      <td id="box6" onClick="handleClick(this.id)">---</td>
+      <td id="box7" onClick="handleClick(this.id)">---</td>
+      <td id="box8" onClick="handleClick(this.id)">---</td>
+    </tr>
+  </table>
 
+  <button onClick="resetBoard()">Reset</button>
+
+  <p id="result"></p>
+</body>
+</html>
