--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -34,10 +34,12 @@
 
     
     <div class="bottom">
-      <button onClick="resetBoard()">RESET</button>
-      <p>score</p>
+      <p id="score">score</p>
       <p id="tallyx">player x.. 0</p>
       <p id="tallyo">player o.. 0</p>
+
+      <button onClick="resetBoard()">RESET</button>
+
       <p id="result"></p>
     </div>
     
