--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -16,19 +16,19 @@
 
     <table>
       <tr class="top">
-        <td id="box0" onClick="handleClick(this.id)"></td>
-        <td id="box1" onClick="handleClick(this.id)"></td>
-        <td id="box2" onClick="handleClick(this.id)"></td>
+        <td id="box0" onClick="toggleClick(this.id)"></td>
+        <td id="box1" onClick="toggleClick(this.id)"></td>
+        <td id="box2" onClick="toggleClick(this.id)"></td>
       </tr>
       <tr class="middle">
-        <td id="box3" onClick="handleClick(this.id)"></td>
-        <td id="box4" onClick="handleClick(this.id)"></td>
-        <td id="box5" onClick="handleClick(this.id)"></td>
+        <td id="box3" onClick="toggleClick(this.id)"></td>
+        <td id="box4" onClick="toggleClick(this.id)"></td>
+        <td id="box5" onClick="toggleClick(this.id)"></td>
       </tr>    
       <tr class="bottom">
-        <td id="box6" onClick="handleClick(this.id)"></td>
-        <td id="box7" onClick="handleClick(this.id)"></td>
-        <td id="box8" onClick="handleClick(this.id)"></td>
+        <td id="box6" onClick="toggleClick(this.id)"></td>
+        <td id="box7" onClick="toggleClick(this.id)"></td>
+        <td id="box8" onClick="toggleClick(this.id)"></td>
       </tr>
     </table>
 
@@ -38,7 +38,7 @@
       <p id="tallyx">player x.. 0</p>
       <p id="tallyo">player o.. 0</p>
 
-      <button onClick="resetBoard()">RESET</button>
+      <button id="btn" onClick="resetBoard()">reset</button>
 
       <p id="result"></p>
     </div>
