added names to score. not sure i like how it looks

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -34,8 +34,7 @@
     
     <div class="bottom">
       <p id="score">score</p>
-      <p id="tallyx">player x.. 0</p>
-      <p id="tallyo">player o.. 0</p>
+      <p id="tally">0 ..x  ||  o.. 0</p>
 
       <button id="btn" onClick="resetBoard()">reset</button>
 
