--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,16 @@
-
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>form</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+<body>
+  <form>
+    <textarea rows = "10" cols="50" id="text"></textarea>
+    <button>send</button>
+  </form>
+  <div id="csv-output">
+  </div>
+  <script type="text/javascript" src="app.js"></script>
+</body>
+</html>
