added some styling. implemented unique id for each line.

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -5,11 +5,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
+  <h2>convert json to csv</h2>
   <form>
-    <textarea rows = "10" cols="50" id="text"></textarea>
-    <button>send</button>
+    <textarea rows = "40" cols="60" id="json">input json...</textarea>
+    <textarea rows = "40" cols="60" id="csv">output csv...</textarea>
   </form>
-  <div id="csv-output">
+  <div>
+    <button style="width: 100px">convert</button>
   </div>
   <script type="text/javascript" src="app.js"></script>
 </body>
